fixed small gap above labels

--- a/wp-content/themes/KollektivGallery/assets/scss/_main.scss
+++ b/wp-content/themes/KollektivGallery/assets/scss/_main.scss
@@ -571,7 +571,7 @@ $social-media-icon-size: 20px;
 }
 
 .label {
-    padding: 0.3em;
+    padding: 6px;
     margin-bottom: $column-gutter/2;
     @media #{$medium-up} {
         margin-bottom: $column-gutter;
