--- a/wp-content/themes/KollektivGallery/css/app-prefix.css
+++ b/wp-content/themes/KollektivGallery/css/app-prefix.css
@@ -1,4 +1,4 @@
-/*! Kollektiv-Legacy 1.0.1 styles.css 2016-06-21 3:30:43 PM */
+/*! Kollektiv-Legacy 1.0.1 styles.css 2016-06-21 3:42:43 PM */
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600);
 .testAutoPrefixer {
@@ -2878,7 +2878,7 @@ article {
     min-height: 700px; } }
 
 .label {
-  padding: 0.3em;
+  padding: 6px;
   margin-bottom: 0.9375rem; }
 @media only screen and (min-width: 40.0625em) {
   .label {
